@@ -306,28 +306,19 @@ ENDIF(CMAKE_SYSTEM MATCHES "SunOS")
 ENDIF(NATIVE)
 
 # threads handling
-IF(CMAKE_SYSTEM MATCHES "morphos")
-  CHECK_INCLUDE_FILE(dlfcn.h MOSTHREAD_AVAILABLE)
-ENDIF(CMAKE_SYSTEM MATCHES "morphos")
+FIND_PACKAGE(Threads)
+IF(CMAKE_USE_WIN32_THREADS_INIT)
+  ADD_DEFINE(USE_WINDOWSTHREADING)
+ELSE(CMAKE_USE_WIN32_THREADS_INIT)
 
-IF(MOSTHREAD_AVAILABLE)
-  ADD_DEFINE(USE_MORPHOSTHREADING)
-ELSE(MOSTHREAD_AVAILABLE)
+IF(CMAKE_USE_PTHREADS_INIT)
+  ADD_DEFINE(USE_POSIXTHREADING)
+  SET(ADD_LIBS ${ADD_LIBS} ${CMAKE_THREAD_LIBS_INIT})
+ELSE(CMAKE_USE_PTHREADS_INIT)
 
-  FIND_PACKAGE(Threads)
-  IF(CMAKE_USE_WIN32_THREADS_INIT)
-    ADD_DEFINE(USE_WINDOWSTHREADING)
-  ELSE(CMAKE_USE_WIN32_THREADS_INIT)
-
-  IF(CMAKE_USE_PTHREADS_INIT)
-    ADD_DEFINE(USE_POSIXTHREADING)
-    SET(ADD_LIBS ${ADD_LIBS} ${CMAKE_THREAD_LIBS_INIT})
-  ELSE(CMAKE_USE_PTHREADS_INIT)
-
-    ADD_DEFINE(NO_THREADING)
-  ENDIF(CMAKE_USE_PTHREADS_INIT)
-  ENDIF(CMAKE_USE_WIN32_THREADS_INIT)
-ENDIF(MOSTHREAD_AVAILABLE)
+  ADD_DEFINE(NO_THREADING)
+ENDIF(CMAKE_USE_PTHREADS_INIT)
+ENDIF(CMAKE_USE_WIN32_THREADS_INIT)
 
 FIND_PACKAGE(SleepFunction)
 FIND_PACKAGE(SelectArgtypes)
